# kubecel

./: readme.md
backend/: docker-compose.yaml  pyproject.toml
backend/api/: Dockerfile  app.py
backend/worker/: Dockerfile  tasks.py
